# minimal-update-server

./: .gitignore  README.md  clientupdater.yml.example  pyproject.toml  server.py
