[tool.poetry]
name = "minimal-update-server"
version = "0.0.1"
description = "Minimal ownCloud update server implementation"
authors = ["Fabian Müller <fmueller@owncloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "2.0.3"
PyYAML = "^6.0"
click = "8.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
